--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-emotion": "^9.2.12",
-    "react-router-dom": "^4.3.1"
+    "react-loadable": "^5.5.0",
+    "react-redux": "^5.1.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
