--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx,css,json}\"",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "dev": "parcel src/index.html",
-    "build": "parcel build --public-url ./dist/ src/index.html",
+    "build": "parcel build --public-url ./dist src/index.html",
     "start": "npm -s run build && babel-node server.js"
   },
   "jest": {
